syntax = "proto3";

package model;

import "google/protobuf/wrappers.proto";
import "protos/model/food_product.proto";

option java_multiple_files = true;
option java_package = "com.aggiedish.protos.model";
option java_outer_classname = "MenuOuterClass";

message Menu {
  message MenuDay {
    google.protobuf.StringValue day = 1;

    repeated FoodProduct food_product = 2;
  }
  repeated MenuDay menu_day = 1;
}
